Modificação do Navegation Drawer e o Componente Busca

--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/toolbar.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/toolbar.xml
@@ -6,4 +6,4 @@
     android:minHeight="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
     android:layout_alignParentLeft="true"
-    app:popupTheme="@style/Theme.MyTheme2" />
+    app:popupTheme="@style/Theme.MyTheme" />
