--- a/Cliente - Android/BoaTrip/app/src/main/res/values/styles.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <!-- colorAccent is used as the default value for colorControlActivated,
          which is used to tint widgets -->
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionMenuTextColor">@android:color/white</item>
 
         <!-- MaterialDrawer specific values -->
         <item name="material_drawer_background">@color/material_drawer_background</item>
@@ -39,7 +40,7 @@
         <!-- colorPrimaryDark is used for the status bar -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
 
         <!-- colorAccent is used as the default value for colorControlActivated,
         which is used to tint widgets -->
