--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca.xml
@@ -21,8 +21,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@id/tb_busca"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"/>
+            android:gravity="center" />
 
         <!--<Button
             android:layout_width="match_parent"
