--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca_origem.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca_origem.xml
@@ -2,11 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
+    android:background="@color/primary_dark"
     tools:context="com.example.mhcabral.boatrip.Activitys.BuscaOrigemActivity">
 
     <include
         android:id="@+id/tb_busca_origem"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar_internal"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView_busca_origem"
+        android:layout_below="@id/tb_busca_origem"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/gray"/>
 
 </RelativeLayout>
