Revert "Atualizando componente Busca"
This reverts commit c4f3d9fa4185d099c9685ca214694c77bba19bb7.

--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/simple_list_item.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/simple_list_item.xml
@@ -5,7 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"
+        android:textAlignment="center"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:paddingLeft="15dp"
-        android:gravity="center"/>
+        android:gravity="center_horizontal"/>
