--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_base_internal.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_base_internal.xml
@@ -7,6 +7,6 @@
 
     <include
         android:id="@+id/tb_base_internal"
-        layout="@layout/toolbar_internal"/>
+        layout="@layout/toolbar"/>
 
 </RelativeLayout>
