--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca.xml
@@ -21,7 +21,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@id/tb_busca"
-            android:gravity="center" />
+            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"/>
 
         <!--<Button
             android:layout_width="match_parent"
