--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca_destino.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca_destino.xml
@@ -2,21 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_dark"
+    android:layout_marginTop="20dp"
     tools:context="com.example.mhcabral.boatrip.Activitys.BuscaDestinoActivity">
 
     <include
         android:id="@+id/tb_busca_destino"
-        layout="@layout/toolbar_internal"/>
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listView_busca_destino"
-        android:layout_below="@id/tb_busca_destino"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/gray"/>
+        layout="@layout/toolbar"/>
 
 </RelativeLayout>
