--- a/Cliente - Android/BoaTrip/app/src/main/res/menu/menu_busca_destino.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/menu/menu_busca_destino.xml
@@ -1,11 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.mhcabral.boatrip.Activitys.BaseInternalActivity">
-    <item
-        android:id="@+id/action_search"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="always"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        android:title="Search"/>
+    tools:context="com.example.mhcabral.boatrip.Activitys.BuscaDestinoActivity">
+    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
