--- a/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/res/layout/activity_busca.xml
@@ -7,7 +7,15 @@
         android:id="@+id/tb_busca"
         layout="@layout/toolbar"/>
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/rl_fragment_container"
+        android:layout_below="@+id/tb_busca"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+    </RelativeLayout>
+
+    <!--<LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +31,7 @@
             android:layout_below="@id/tb_busca"
             android:gravity="center" />
 
-        <!--<Button
+        <Button
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:text="@string/buttom_busca"
@@ -32,8 +40,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/listViewBusca"/>-->
+            android:layout_below="@+id/listViewBusca"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 </RelativeLayout>
